<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:src="@color/grey"
                android:contentDescription="@string/iv_desc_list_item" />

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins"
                tools:text="@string/item_title"
                android:textColor="@color/title_text_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/poppins"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@string/item_location"
                android:textColor="@color/edit_text_hint_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="12dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:fontFamily="@font/poppins"
                tools:text="@string/item_description"
                android:textColor="@color/edit_text_hint_color"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>