<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".view.story.add.AddStoryActivity">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/add_image_preview"
            android:scaleType="centerCrop"
            android:src="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/location_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/background_location_switch"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_preview">

            <TextView
                android:id="@+id/location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/location_state"
                tools:text="Jalan Soekarno-Hatta"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/location_state"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/location_option">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_camera"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_secondary_button"
                    android:text="@string/button_camera_text"
                    android:textColor="@color/orange" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_gallery"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_secondary_button"
                    android:text="@string/button_gallery_text"
                    android:textColor="@color/orange" />

            </LinearLayout>

            <com.nurhaqhalim.momento.components.MoEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="26dp"
                android:gravity="top"
                android:hint="@string/add_description_text"
                android:inputType="text|textMultiLine"
                android:padding="8dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_primary_button"
                android:text="@string/upload_story_text"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>