<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.story.detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        tools:src="@color/black"
        android:contentDescription="@string/add_image_preview" />

    <LinearLayout
        android:id="@+id/story_description_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroun_detail"
        android:layout_below="@+id/iv_detail_photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-24dp"
        android:orientation="vertical">
        
        <View
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/bottomsheet_pill"/>

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Judul" />

        <TextView
            android:id="@+id/tv_detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/location_text"
            android:textSize="12sp"
            tools:text="Date" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />


        <TextView
            android:id="@+id/tv_detail_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="8sp"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="2"
            android:textColor="@color/location_text"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_location"
            tools:text="Location" />


        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="Description" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/errorState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/error_anim"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_fileName="error.json"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/error_list_message_text"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/background_primary_button"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/reload_button_text"
            android:textAllCaps="false"
            android:textColor="@color/orange" />

    </LinearLayout>

</RelativeLayout>